{
    "name": "SuperInputActions",
    "maps": [
        {
            "name": "New action map",
            "id": "e4b0f50b-c679-411e-a728-5bf7c00716d7",
            "actions": [
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "9f5e0361-6bb6-4be8-a24c-8244c40180b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "591f1db9-a2fe-46e6-a227-50ec25b5005d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftGrip",
                    "type": "Button",
                    "id": "4be7ac79-35fb-45f8-9d38-08c8969e3304",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrip",
                    "type": "Button",
                    "id": "604388a3-5bb8-447d-9eff-4ac869c40c27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab47e32f-46be-4934-9e1a-e19e5c0958d7",
                    "path": "<PXR_Controller>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bc86b2e-bb03-4251-b60a-9446506f17c5",
                    "path": "<PXR_Controller>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75d91c7a-3075-4800-972b-0578dc921202",
                    "path": "<PXR_Controller>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1556d24-fee1-46a7-a5be-ffbff6db0770",
                    "path": "<PXR_Controller>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}